--- a/SlozeniOblikVezbiProjekat/src/main/resources/static/index.html
+++ b/SlozeniOblikVezbiProjekat/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 	<form method="post" action="korisnici/login">
 		<table>
 			<caption>Prijava korisnika na sistem</caption>
-			<tr><th>Email:</th><td><input type="text" value="" name="email" required/></td></tr>
+			<tr><th>JMBG:</th><td><input type="text" value="" name="jmbg" required/></td></tr>
 			<tr><th>Sifra:</th><td><input type="password" value="" name="sifra" required/></td></tr>
 			<tr><th></th><td><input type="submit" value="Prijavi se" /></td>
 		</table>
